--- a/src/pages/advisors/components/AdvisorsWidget.css
+++ b/src/pages/advisors/components/AdvisorsWidget.css
@@ -30,9 +30,15 @@
 }
 
 .AdvisorsDetails-poster {
-	height: 300px;
-	width: 300px;
-	margin: 0 auto;
+	height: 150px;
+	width: 150px;
+	margin-left: 7px;
+}
+
+.AdvisorDetails-desc {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .AdvisorsDetails-button-reject {
@@ -50,25 +56,4 @@
 	display: flex;
 	border: 1px solid;
 	margin: 3px;
-}
-
-.AdvisorPanel-list-item-status-label {
-	margin: auto 10px auto auto;
-	border-radius: 0.5em;
-	text-align: center;
-	width: 81px;
-}
-
-.AdvisorPanel-list-item-status-label.pending {
-	background-color: #cccccccc;
-}
-
-.AdvisorPanel-list-item-status-label.accepted {
-	background-color: #198754;
-	color: white;
-}
-
-.AdvisorPanel-list-item-status-label.rejected {
-	background-color: #dc3545;
-	color: white;
 }
