Changed Advisor Profile Header
Added a filler name and image at the top of the middle column to fill in the advisor profile in the upper third

--- a/src/pages/advisors/components/AdvisorsWidget.css
+++ b/src/pages/advisors/components/AdvisorsWidget.css
@@ -43,7 +43,28 @@
 
 .AdvisorProfile-list-item {
 	text-align: left;
-	display: flex;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-gap: 10px;
 	border: 1px solid;
 	margin: 3px;
+  }
+
+.profImg{
+	float: left;
+	width: 60px;
+	height: 60px;
+	background: #555;
+}
+
+.profHead {
+	float: left;
+	margin-left: 10px;
+}
+
+.profile-heading {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vh); /* Adjust the base font size and scaling factor as needed */
 }
